--- a/.editorconfig
+++ b/.editorconfig
@@ -2,15 +2,12 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+charset: utf-8
+end_of_line: lf
+indent_size: 2
+indent_style: space
+insert_final_newline: true
+trim_trailing_whitespace: true
 
-[{*.json,.*}]
-indent_size = 2
-
-[*.md]
-trim_trailing_whitespace = false
+[*.{md,markdown}]
+trim_trailing_whitespace: false
